re-editing structure

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="recipes/japanese-fish-cake-stew.html"
-          >japanese-fish-cake-stew</a
+        <a href="recipes/Gluten-Free-Turkey-eatballs.html"
+          >Gluten-Free Turkey Meatballs</a
         >
       </li>
-      <li><a href="recipes/ndengaku.html">NDENGAKU</a></li>
       <li>
-        <a href="recipes/rdatradition.html"
-          >RWANDA Traditional Food(Beans And avocado width boiled sweet
-          potetos)</a
+        <a href="recipes/the-best-thai-coconut-soup.html"
+          >The Best Thai Coconut Soup</a
+        >
+      </li>
+      <li>
+        <a href="recipes/Chef-john's-Sausage-Shrimp-Jambalaya.html"
+          >Chef John's Sausage & Shrimp Jambalaya</a
         >
       </li>
     </ul>
