--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="recipes/Gluten-Free-Turkey-eatballs.html"
+        <a href="recipes/Gluten-Free-Turkey-eatballs.html" target="_blank"
           >Gluten-Free Turkey Meatballs</a
         >
       </li>
       <li>
-        <a href="recipes/the-best-thai-coconut-soup.html"
+        <a href="recipes/the-best-thai-coconut-soup.html" target="_blank"
           >The Best Thai Coconut Soup</a
         >
       </li>
       <li>
-        <a href="recipes/Chef-john's-Sausage-Shrimp-Jambalaya.html"
+        <a
+          href="recipes/Chef-john's-Sausage-Shrimp-Jambalaya.html"
+          target="_blank"
           >Chef John's Sausage & Shrimp Jambalaya</a
         >
       </li>
